6/03/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Fix svn tag command. Fix cgdb.email.
	* release-todo.txt: Update.

6/03/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Copy configure.in over.
	* autoregen.sh: Only generate configure.in if called standalone.

6/03/2006 Bob Rossi <bob@brasko.net>

	* configure.in: Deleted.
	* configure.init: Added.
	* autoregen.sh: Copy configure.init to configure.in.

6/03/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Steps are even more automated.
	* release-todo.txt: Describe manual steps needed to be taken for
	release.

6/02/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh (configure): Remove --with-readline, ubuntu supports
	readline-5.1 now.
	* configure.in: Check in configure.in with number that describes that
	the version is generated from autoregen.sh.
    
6/01/2006 Bob Rossi <bob@brasko.net>

	* configure.in (AC_INIT): Make version say it should be generated.

5/31/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Pass correct version number to autoregen.sh
	* autoregen.sh: Update configure.in to have version number as the 
	date if a version number isn't passed in.
	
5/31/2006 Bob Rossi <bob@brasko.net>

	* autorelease.sh: Trying to update for svn.

5/31/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Remove change regarding 'list' feature.

5/23/2006 Bob Rossi <bob@brasko.net>

	* autoregen.sh: Remove the auto tool version checks.

5/23/2006 Bob Rossi <bob@brasko.net>

	* NEWS: CGDB no longer supports the shell command. It was never
	released with this functionality however.

5/23/2006 Bob Rossi <bob@brasko.net>

	* TODO: Fix bison TODO item.

5/21/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about fixed pty in NEWS file.

5/17/2006 Bob Rossi <bob@brasko.net>

	* NEWS: Add note about switching to SVN.

5/13/2006 Bob Rossi <bob@brasko.net>

	* config/readline_check_version.m4: Fix 'test' condition.
	* NEWS: Add entry for the above fix.

5/05/2006 Bob Rossi <bob@brasko.net>
