@@ -8,6 +8,7 @@ fi
 
 CGDB_VERSION=$1
 CGDB_RELEASE=cgdb-$CGDB_VERSION
+CGDB_RELEASE_STR=`echo "$CGDB_RELEASE" | perl -pi -e 's/\./_/g'`
 CGDB_SOURCE_DIR=$PWD
 CGDB_BUILD_DIR=$PWD/version.texi.builddir
 CGDB_C89_BUILD_DIR=$PWD/c89.builddir
@@ -177,8 +178,8 @@ echo "" >> $CGDB_RELEASE_UPLOAD_SH
 echo '################################################################################' >> $CGDB_RELEASE_UPLOAD_SH
 echo 'echo "-- Create the svn $CGDB_RELEASE tag/branch"' >> $CGDB_RELEASE_UPLOAD_SH
 echo '################################################################################' >> $CGDB_RELEASE_UPLOAD_SH
-echo 'CGDB_RELEASE_STR=`echo "$CGDB_RELEASE" | perl -pi -e 's/\./_/g'`' >> $CGDB_RELEASE_UPLOAD_SH
-echo "svn copy https://svn.sourceforge.net/svnroot/cgdb/cgdb/trunk https://svn.sourceforge.net/svnroot/cgdb/cgdb/tags/$CGDB_RELEASE_STR" >> $CGDB_RELEASE_UPLOAD_SH
+echo "svn copy https://svn.sourceforge.net/svnroot/cgdb/cgdb/trunk \\" >> $CGDB_RELEASE_UPLOAD_SH
+echo "         https://svn.sourceforge.net/svnroot/cgdb/cgdb/tags/$CGDB_RELEASE_STR" >> $CGDB_RELEASE_UPLOAD_SH
 echo '' >>  $CGDB_RELEASE_UPLOAD_SH
 
 #echo '################################################################################' >> $CGDB_RELEASE_UPLOAD_SH
