@@ -1,5 +1,9 @@
 6/03/2006 Bob Rossi <bob@brasko.net>
 
+	* autorelease.sh: Another upload.sh fix.
+
+6/03/2006 Bob Rossi <bob@brasko.net>
+
 	* autorelease.sh: Fix svn tag command. Fix cgdb.email.
 	* release-todo.txt: Update.
 
